<resources>
    <string name="app_name">IoT Trigger App</string>
    <string name="on"></string>
    <string name="off"></string>

    <string name="btnConnect">Connect to AWS</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>

    <string name="btnDisconnect">Disconnect</string>
    <string name="btnToggle">Toggle</string>
    <string name="textview">TextView</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IoT Projekt 2019</string>
    <string name="nav_header_subtitle">Robin, Max, Felix, Julia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_aboutus">About us</string>
    <string name="communicate">Communicate</string>
</resources>
